--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -123,7 +123,6 @@ dbem_import <- function(taxon_key, #Except taxon_key
 
 ```
 
-
 ## Proportion approach
 
 ### Fun `EstPropChange`
@@ -291,8 +290,6 @@ EstPropChange <- function(taxon_key,
 }
 
 ```
-
-
 
 ### Fun `EstTransIndex`
 
@@ -762,6 +759,8 @@ spp_list <- unique(Transboundary_spp$taxon_key)[1:3]
 # Estimating proportion change
 ####_______________________ ####
 
+t_start <- Sys.time()
+
 lapply(
   spp_list, #c(600004,600005),
   EstPropChange,
@@ -771,5 +770,7 @@ lapply(
   path = DBEM_path,
   neighbours = Neighbours
 )
+
+t_end <- Sys.time()-t_start;t_end
 
 ```
